# rofi-ollama

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs
