[package]
name = "rofi_ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ollama-rs = "0.1.7"
rofi-mode = "0.4.0"
tokio = {version="1.36.0", features = ["rt-multi-thread"]}
