[package]
name = "rofi_ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.25"
rofi-mode = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = {version="1.36.0", features = ["rt-multi-thread"]}
