[package]
name = "rofi_ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rofi-mode = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
